Link and Unlink buttons

--- a/core/src/main/resources/templates/core/management_user_habit.html
+++ b/core/src/main/resources/templates/core/management_user_habit.html
@@ -27,6 +27,7 @@
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
     <script th:src="@{/management/user/buttonsAJAX.js}"></script>
     <script th:src="@{/management/user/jquery.liTextLength.js}"></script>
+    <script th:src="@{/management/habit/buttonsAJAX.js}"></script>
     <script>
         $(function () {
             $('.pr').liTextLength({
@@ -174,6 +175,10 @@
             margin: 0;
             padding: 0;
             font-size: 12px;
+        }
+
+        .table-responsive {
+            overflow-x: auto;
         }
 
     </style>
@@ -339,6 +344,17 @@
                         <img src="/img/arrow-up.svg" alt="arrow-icon">
                     </button>
                 </div>
+                <div class="complexity-line">
+                    <a id="unlinktable1" class="btn btn-secondary"
+                       th:onclick="'unlinkFacts('+${habit.id}+')'">
+                        <div>Unlink</div>
+                    </a>
+
+                    <a id="linknewtable1" class="btn btn-secondary"
+                       th:onclick="'linknew()'">
+                        <div>Link new</div>
+                    </a>
+                </div>
             </div>
 
             <div class="table-responsive userpage">
@@ -347,8 +363,8 @@
                     <tr class="table-primary light-text">
                         <th style="width: 20px">
                                 <span class="custom-checkbox">
-                                    <input type="checkbox" id="selectAll">
-                                    <label for="selectAll"></label>
+                                    <input type="checkbox" id="selectAll1">
+                                    <label for="selectAll1"></label>
                                 </span>
                         </th>
                         <th style="width: 300px">[[#{greenCity.pages.table.name}]]</th>
@@ -359,11 +375,13 @@
                     <tbody id="table1">
                     <th:block class="list-of" th:each="habitFacts, iterStatus :${hfacts.getPage()}">
                         <tr class="light-text">
-                            <td style="width: 20px">
+                            <td style="width: 20px;">
                                     <span class="custom-checkbox">
-                                            <input th:id="'factscheckbox'+${iterStatus.count}"
+                                            <input type="checkbox" th:id="'factscheckbox'+${iterStatus.count}"
+                                                   id="checkbox1"
                                                    name="options[]" th:value="${habitFacts.getId()}"
-                                                   th:onclick="'updateCheckBoxCountFacts('+${iterStatus.count}+')'">
+                                                   th:onclick="'updateCheckBoxCountFacts('+${iterStatus.count}+','+${habitFacts.getId()}+')'">
+                                            <label th:for="'factscheckbox'+${iterStatus.count}" for="checkbox1"></label>
                                     </span>
                             </td>
 
@@ -383,7 +401,7 @@
 
             <!-- Habit`s Advices table-->
             <div class="table-header">
-                <h3>[[#{greenCity.sidebar.habits.advice}]]
+                <h3>[[#{greenCity.sidebar.habits.advice}]]:
                     <td th:text="${hadvices.size()}"/>
                 </h3>
                 <div class="hide-button">
@@ -392,17 +410,20 @@
                         <img src="/img/arrow-up.svg" alt="arrow-icon">
                     </button>
                 </div>
-                <a id="unlinktable2" class="btn btn-secondary"
-                   data-toggle="modal">
-                    <div>Unlink</div>
-                </a>
-                <a id="linknewtable2" class="btn btn-secondary"
-                   data-toggle="modal">
-                    <div>Link new</div>
-                </a>
+                <div class="complexity-line">
+                    <a id="unlinktable2" class="btn btn-secondary"
+                       th:onclick="'unlinkAdvices('+${habit.id}+')'">
+                        <div>Unlink</div>
+                    </a>
+
+                    <a id="linknewtable2" class="btn btn-secondary"
+                       th:onclick="'linknew()'">
+                        <div>Link new</div>
+                    </a>
+                </div>
             </div>
 
-            <div class="table-responsive userpage">
+            <div class="table-responsive">
                 <table class="table table-bordered">
                     <thead>
                     <tr class="table-primary light-text">
@@ -423,8 +444,11 @@
                             <td style="width: 20px">
                                     <span class="custom-checkbox">
                                             <input type="checkbox" th:id="'advicescheckbox'+${iterStatus.count}"
+                                                   id="checkbox2"
                                                    name="options[]" th:value="${iterStatus.count}"
                                                    th:onclick="'updateCheckBoxCountAdvices('+${iterStatus.count}+')'">
+                                            <label th:for="'advicescheckbox'+${iterStatus.count}"
+                                                   for="checkbox2"></label>
                                     </span>
                             </td>
 
@@ -433,7 +457,6 @@
                             </td>
 
                             <td style="width: 52px">Link</td>
-
                         </tr>
                     </th:block>
                     </tbody>
@@ -442,7 +465,7 @@
 
             <!-- Shopping List table-->
             <div class="table-header">
-                <h3>[[#{greenCity.sidebar.habits.shoppingList}]]
+                <h3>[[#{greenCity.sidebar.habits.shoppingList}]]:
                     <td th:text="${hshops.size()}"/>
                 </h3>
                 <div class="hide-button">
@@ -450,6 +473,17 @@
                         <span>hide</span>
                         <img src="/img/arrow-up.svg" alt="arrow-icon">
                     </button>
+                </div>
+                <div class="complexity-line">
+                    <a id="unlinktable3" class="btn btn-secondary"
+                       th:onclick="'unlinkShop('+${habit.id}+')'">
+                        <div>Unlink</div>
+                    </a>
+
+                    <a id="linknewtable3" class="btn btn-secondary"
+                       th:onclick="'linknew()'">
+                        <div>Link new</div>
+                    </a>
                 </div>
             </div>
 
@@ -460,7 +494,7 @@
                         <th style="width: 20px">
                                 <span class="custom-checkbox">
                                     <input type="checkbox" id="selectAll3">
-                                    <label for="selectAll"></label>
+                                    <label for="selectAll3"></label>
                                 </span>
                         </th>
                         <th style="width: 300px">[[#{greenCity.pages.table.name}]]</th>
@@ -472,10 +506,12 @@
                     <th:block class="list-of" th:each="shopitem, iterStatus :${hshops}">
                         <tr class="light-text">
                             <td style="width: 20px">
-                                    <span class="custom-checkbox">
-                                            <input type="checkbox" th:id="'checkedChShop'+${iterStatus.count}"
+                                    <span class="custom-checkbox" style="">
+                                            <input type="checkbox" th:id="'Shopcheckbox'+${iterStatus.count}"
+                                                   id="checkbox3"
                                                    name="options[]" th:value="${shopitem.id}"
-                                                   th:onclick="'updateCheckBoxCountShop('+${iterStatus.count}+')'">
+                                                   th:onclick="'updateCheckBoxCountShop('+${iterStatus.count}+','+${shopitem.id}+')'">
+                                            <label th:for="'Shopcheckbox'+${iterStatus.count}" for="checkbox3"></label>
                                     </span>
                             </td>
 
