--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800&display=swap&subset=cyrillic"
           rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap" rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/c847fb58e4.js" crossorigin="anonymous"></script>
+<!--    <script src="https://kit.fontawesome.com/c847fb58e4.js" crossorigin="anonymous"></script>-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -147,7 +147,7 @@
                             </th>
                             <th>  <!--style="width: 288px;"-->
                                 [[#{greenCity.pages.table.credo}]]
-                                <img id="credo-icon" class="sorting" style="left: 70%" src="/img/arrow-up.svg" alt="arrow-icon" onclick="sortByFieldName('userCredo')">
+                                <img id="credo-icon" class="sorting" style="left: 82%" src="/img/arrow-up.svg" alt="arrow-icon" onclick="sortByFieldName('userCredo')">
                                 <span class="table-filter-icon"></span>
 <!--                                <div class="name-filter-form">-->
 <!--                                    <div class="filter-sorting-buttons">-->
@@ -472,9 +472,10 @@
                                 <input type="checkbox" id="other" onclick="otherCheck()" class="deactivate-checkbox">
                                 <p class="deactivation-reasons">[[#{greenCity.user.page.popup.deactivated.fieldset.input2}]]</p><br>
                             </div>
-                            <div id="user-lang">
+                            <div id="user-lang" style="display: none">
                             </div>
-                            <input type="text" id="othertext" disabled="disabled" class="custom-reason">
+                            <input type="text" id="othertext" style="display: none" class="custom-reason">
+                            <span th:id="errorDeactivateUser" class="errorSpan"></span>
                         </div>
                         <div class="modal-footer">
                             <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal"
