Changes in pop-ups "Activate" and "Deactivate" Changed location of "deactivate" in pop up button Added logic to update reasons of user deactivation in activation pop up, so now it displays correct reasons

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -1432,7 +1432,9 @@ td input[type=search] {
     border-radius: 4px;
 
 }
-
+#deactivateOneSubmit{
+    margin-top: 25px;
+}
 .btn-remove:hover {
     color: #fff;
     background-color: #B21D15;
