fixed some issues

--- a/core/src/main/resources/templates/core/management_user_personal_page.html
+++ b/core/src/main/resources/templates/core/management_user_personal_page.html
@@ -682,7 +682,7 @@
     function saveListItem(itemId, habitId) {
 
         $.ajax({
-            type: "POST",
+            type: "PUT",
             url: "/management/users/updateShoppingItem/"+habitId+"/"+itemId,
         }).done(function(data) {
             console.log(data);
