--- a/core/src/main/resources/templates/core/management_tags.html
+++ b/core/src/main/resources/templates/core/management_tags.html
@@ -203,6 +203,7 @@
                                 <select name="tagType" class="form-control">
                                     <option>ECO_NEWS</option>
                                     <option>HABIT</option>
+                                    <option>EVENT</option>
                                 </select>
                             </label>
                             <span class="errorSpan" th:id="errorModalSavetype"></span>
@@ -260,6 +261,7 @@
                                 <select name="tagType" class="form-control">
                                     <option>ECO_NEWS</option>
                                     <option>HABIT</option>
+                                    <option>EVENT</option>
                                 </select>
                             </label>
                             <span class="errorSpan" th:id="errorModalUpdatetype"></span>
