create management event page

--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -219,7 +219,7 @@
                                                                                                 max-width: 150px;
                                                                                                 text-overflow: ellipsis; /* ... */">
                                     </td>
-                                    <td th:text="${allEcoNews.getText()}" style="white-space: nowrap; /* Заборона переносу */
+                                    <td th:text="${allEcoNews.getContext()}" style="white-space: nowrap; /* Заборона переносу */
                                                                                                 overflow: hidden;
                                                                                                 max-width: 150px;
                                                                                                 text-overflow: ellipsis;">
