--- a/core/src/main/resources/templates/core/sidepanel.html
+++ b/core/src/main/resources/templates/core/sidepanel.html
@@ -63,6 +63,11 @@
             <span>[[#{greenCity.sidebar.econews}]]</span></a>
         </li>
 
+        <li><a th:href="@{/management/events}">
+            <div class="img_n"><img th:src="@{/img/eco_news_icon.png}"></div>
+            <span>[[#{greenCity.sidebar.events}]]</span></a>
+        </li>
+
         <li><a th:href="@{/management/tags}">
             <div class="img_n"><img th:src="@{/img/tag_icon.png}"></div>
             <span>[[#{greenCity.sidebar.tags}]]</span></a></li>
