--- a/core/src/main/resources/templates/core/management_user.html
+++ b/core/src/main/resources/templates/core/management_user.html
@@ -529,7 +529,7 @@
                         <div class="modal-footer">
                             <input type="button" class="wbtn btn-default btn-tertiary" data-dismiss="modal"
                                    th:value="#{greenCity.pages.popup.cancel.}">
-                            <a href="" id="deactivateAllSubmit" class="btn btn-remove">
+                            <a href="" id="deactivateAllSubmit" class="btn btn-remove" style="margin-top: 25px;">
                                 <div>[[#{greenCity.user.page.deactivated}]]</div>
                             </a>
                         </div>
