Fixed style issues

--- a/core/src/main/resources/templates/core/management_achievement.html
+++ b/core/src/main/resources/templates/core/management_achievement.html
@@ -377,7 +377,7 @@
                                         <tr><option><td th:text="${condition.name()}"></td></option></tr>
                                     </th:block>
                                 </select>
-                                <input class="form-control condition-key" name="conditionValue" type="text">
+                                <input class="form-control condition-value" name="conditionValue" type="text">
                                 <span th:id="errorModalUpdatecondition" class="errorSpan"></span>
                             </div>
                             <div class="condition-buttons-block" style="text-align:center">
