--- a/core/src/main/resources/templates/core/management_achievement.html
+++ b/core/src/main/resources/templates/core/management_achievement.html
@@ -94,10 +94,10 @@
                                 <table class="table table-borderless m-0">
                                     <thead>
                                     <tr class="table-secondary">
-                                        <th style="width: 5%">[[#{greenCity.pages.table.language.code}]]</th>
-                                        <th style="width: 15%">[[#{greenCity.pages.table.title}]]</th>
-                                        <th style="width: 55%">[[#{greenCity.pages.table.description}]]</th>
-                                        <th style="width: 25%">[[#{greenCity.pages.table.message}]]</th>
+                                        <th class="header-language-code">[[#{greenCity.pages.table.language.code}]]</th>
+                                        <th class="header-title">[[#{greenCity.pages.table.title}]]</th>
+                                        <th class="header-description">[[#{greenCity.pages.table.description}]]</th>
+                                        <th class="header-message">[[#{greenCity.pages.table.message}]]</th>
                                     </tr>
                                     </thead>
                                     <tbody>
